[project]
name = "sample-agentic-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
